--- a/store/templates/partials/footer.html
+++ b/store/templates/partials/footer.html
@@ -32,6 +32,11 @@
         </a>
     </div>
 
+    <!-- Flèche vers le haut -->
+    <a href="#" class="back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </a>
+
     {% load static %}
     <!-- Chargement des fichiers JavaScript -->
     <script src="{% static 'js/footer.js' %}"></script>
