--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="{% static 'css/stylesNavBar.css' %}" />
     <link rel="stylesheet" href="{% static 'css/stylesPanneau.css' %}" />
     <link rel="stylesheet" href="{% static 'css/stylesRecherche.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/products.css' %}">
+<link rel="stylesheet" href="{% static 'css/comments.css' %}">
+<link rel="stylesheet" href="{% static 'css/buttons.css' %}">
+
 
     <!-- CDN pour CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +31,16 @@
   </head>
   <body>
     {% include 'partials/header.html' %}  <!-- Inclusion du header -->
-
+<!-- Affichage des messages -->
+{% if messages %}
+<div class="messages">
+  {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+      {{ message }}
+    </div>
+  {% endfor %}
+</div>
+{% endif %}
 
     <div id="sidePanel" class="side-panel">
       <a href="javascript:void(0)" class="close-btn" onclick="closePanel()"
