--- a/store/templates/registration/login.html
+++ b/store/templates/registration/login.html
@@ -2,16 +2,42 @@
 
 {% block title %}Connexion{% endblock %}
 {% load static %}
+
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/auth.css' %}" />
-{% endblock %}
-{% block content %}
-  <h2>Connexion</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Connexion</button>
-  </form>
 
-  <p>Vous n'avez pas encore de compte ? <a href="{% url 'register' %}">Créer un compte</a></p>
+{% endblock %}
+
+{% block content %}
+<div class="auth-container">
+    <h2>Connexion</h2>
+    <!-- Affichage des messages -->
+   {% if messages %}
+   <div class="messages">
+     {% for message in messages %}
+       <div class="alert alert-{{ message.tags }}">
+         {{ message }}
+       </div>
+     {% endfor %}
+   </div>
+ {% endif %}
+
+ <form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+
+  <!-- Checkbox "Se souvenir de moi" -->
+  <label>
+    <input type="checkbox" name="remember_me"> Se souvenir de moi
+  </label>
+  
+  <button type="submit" class="btn btn-primary">Connexion</button>
+</form>
+
+    
+    <div class="auth-links">
+        <p><a href="{% url 'password_reset' %}">Mot de passe oublié ?</a></p>
+        <p>Vous n'avez pas encore de compte ? <a href="{% url 'signup' %}">Créer un compte</a></p>
+    </div>
+</div>
 {% endblock %}
