--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -1,76 +1,58 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Baouly's Shop{% endblock %}</title>
-    {% load static %} {% block extra_css %}{% endblock %}
 
-    <!-- Chargement des fichiers CSS -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{% block title %}Baouly's Shop{% endblock %}</title>
+  {% load static %} {% block extra_css %}{% endblock %}
 
-    <link rel="stylesheet" href="{% static 'css/stylesNavBar.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/stylesPanneau.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/stylesRecherche.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/products.css' %}">
-<link rel="stylesheet" href="{% static 'css/comments.css' %}">
-<link rel="stylesheet" href="{% static 'css/buttons.css' %}">
+  <!-- Chargement des fichiers CSS -->
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+
+  <link rel="stylesheet" href="{% static 'css/stylesNavBar.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/stylesPanneau.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/stylesRecherche.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/products.css' %}">
+  <link rel="stylesheet" href="{% static 'css/comments.css' %}">
+  <link rel="stylesheet" href="{% static 'css/buttons.css' %}">
+
+  <!-- CDN pour CSS Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Lien Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <!-- Ajouter ici d'autres fichiers CSS si nécessaire -->
+  {% block extra_styles %}{% endblock %}
+
+  <script src="https://www.paypal.com/sdk/js?client-id=VOTRE_CLIENT_ID_PAYPAL&currency=USD"></script>
+  <script src="https://js.stripe.com/v3/"></script>
+</head>
+
+<body>
+  {% include 'partials/header.html' %}
 
 
-    <!-- CDN pour CSS Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    
 
-    <!-- Lien Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
-    <!-- Ajouter ici d'autres fichiers CSS si nécessaire -->
-    {% block extra_styles %}{% endblock %}
-  </head>
-  <body>
-    {% include 'partials/header.html' %}  <!-- Inclusion du header -->
-<!-- Affichage des messages -->
-{% if messages %}
-<div class="messages">
-  {% for message in messages %}
-    <div class="alert alert-{{ message.tags }}">
-      {{ message }}
-    </div>
-  {% endfor %}
-</div>
-{% endif %}
+  <!-- Contenu principal -->
+  <main>
+    {% block content %}
+    <!-- Le contenu spécifique à chaque page sera inséré ici -->
+    {% endblock %}
+  </main>
 
-    <div id="sidePanel" class="side-panel">
-      <a href="javascript:void(0)" class="close-btn" onclick="closePanel()"
-        >&times;</a
-      >
-      <!-- Les liens vont être ajoutés ici dynamiquement -->
-    </div>
+  <!-- Inclusion du pied de page -->
+  {% include 'partials/footer.html' %}
+  <script src="{% static 'js/script.js' %}"></script>
+  <script src="{% static 'js/paiement.js' %}"></script>
+  <script src="{% static 'js/scriptRecherche.js' %}"></script>
+  <!-- Scripts JavaScript globaux -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bloc pour les scripts spécifiques à chaque page -->
+  {% block extra_js %}{% endblock %}
+  <!-- JavaScript Files -->
 
-    <!-- Contenu principal -->
-    <main>
-      {% block content %}
-      <!-- Le contenu spécifique à chaque page sera inséré ici -->
-      {% endblock %}
-    </main>
+</body>
 
-    <!-- Inclusion du pied de page -->
-    {% include 'partials/footer.html' %}
-    <script src="{% static 'js/script.js' %}"></script>
-    <script src="{% static 'js/scriptRecherche.js' %}"></script>
-     <!-- Scripts JavaScript globaux -->
-   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-     <!-- Bloc pour les scripts spécifiques à chaque page -->
-   {% block extra_js %}{% endblock %}
-    <!-- JavaScript Files -->
-
-  
-  
-    
-  
-
-  </body>
 </html>
