--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %} {% load static %} {% block extra_css %}
 
 {% endblock %} {% block content %}
+
     <!-- Bannière d'accueil -->
     <section class="banner text-center bg-light py-5">
       <div class="container">
         <h1 class="display-4 fw-bold">Bienvenue sur Baouly's Store !</h1>
         <p class="lead">Découvrez des produits uniques pour votre quotidien.</p>
-        
+   
+      
       </div>
     </section>
 
@@ -19,7 +21,10 @@
         <a href="{% url 'detail_produit' produit.id %}" class="text-decoration-none text-dark">
           <div class="d-flex flex-column align-items-center">
             <div class="rounded-circle bg-light d-flex align-items-center justify-content-center shadow-sm" style="width: 140px; height: 140px; overflow: hidden;">
-              <img src="{{ produit.image.url }}" alt="{{ produit.nom }}" style="width: 100%; height: 100%; object-fit: cover;">
+              <img src="{% if produit.image %}{{ produit.image.url }}{% elif produit.image_url %}{{ produit.image_url }}{% else %}{% static 'images/default-image.jpg' %}{% endif %}" 
+              alt="{{ produit.nom }}" 
+              style="width: 100%; height: 100%; object-fit: cover;">
+         
             </div>
             <p class="mt-2 fw-bold">{{ produit.nom }}</p>
             <p class="text-primary fw-bold">{{ produit.prix }} HTG</p>
