--- a/store/templates/partials/footer.html
+++ b/store/templates/partials/footer.html
@@ -1,43 +1,92 @@
 {% load static %}
 
-{% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/footer.css' %}">
-{% endblock %}
+<footer class="bg-dark text-white py-3">
+  <div class="container">
+    <div class="row justify-content-center text-center text-md-left">
+      <!-- Colonne 1 : À propos -->
+      <div class="col-lg-4 col-md-4 mb-2">
+        <h4 class="text-uppercase">À propos de nous</h4>
+        <p>
+          Baouly'S Store est votre destination pour des produits de qualité
+          supérieure à des prix abordables.
+        </p>
+        <a href="{% url 'about' %}" class="text-white">En savoir plus</a>
 
-<footer>
-    <p>&copy; <span id="currentYear"></span> Baouly'S Store</p>
+        📧
+        <a href="mailto:elconquistadorbaoulyn@gmail.com" style="color: white">
+          elconquistadorbaoulyn@gmail.com
+        </a>
+      </div>
 
-    <!-- Liens des réseaux sociaux -->
-    <div class="social-icons">
-        <a href="https://web.facebook.com/" target="_blank">
-            <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="https://twitter.com" target="_blank">
-            <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://web.telegram.org/a/" target="_blank">
-            <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://linkedin.com" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-        </a>
-        <a href="https://whatsapp.com" target="_blank">
-            <i class="fab fa-whatsapp"></i>
-        </a>
-        <a href="https://telegramm.com" target="_blank">
-            <i class="fab fa-telegram"></i>
-        </a>
-        <a href="https://tiktok.com" target="_blank">
-            <i class="fab fa-tiktok"></i>
-        </a>
+      <!-- Colonne 2 : Liens rapides -->
+      <div class="col-lg-4 col-md-4 mb-2">
+        <h4 class="text-uppercase">Liens rapides</h4>
+        <ul class="list-unstyled">
+          <li><a href="{% url 'new_arrivals' %}" class="text-white">Nouveautés</a></li>
+          <li><a href="{% url 'promotions' %}" class="text-white">Promotions</a></li>
+          <li><a href="{% url 'blog' %}" class="text-white">Blog</a></li>
+          <li><a href="{% url 'faq' %}" class="text-white">FAQ</a></li>
+          <li><a href="{% url 'return_policy' %}" class="text-white">Politique de retour</a></li>
+          <li><a href="{% url 'order_tracking' %}" class="text-white">Suivi de commande</a></li>
+          
+        </ul>
+      </div>
+
+      <!-- Colonne 3 : Suivez-nous -->
+      <div class="col-lg-4 col-md-4 mb-2">
+        <h4 class="text-uppercase">Suivez-nous</h4>
+        <div>
+          <a href="https://facebook.com" target="_blank" class="text-white mr-2"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a href="https://twitter.com" target="_blank" class="text-white mr-2"
+            ><i class="fab fa-twitter"></i
+          ></a>
+          <a
+            href="https://instagram.com"
+            target="_blank"
+            class="text-white mr-2"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://linkedin.com" target="_blank" class="text-white mr-2"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+        </div>
+        <p class="mt-2">📩 Inscrivez-vous à notre newsletter</p>
+        <p>📞 +509 44521822</p>
+        <p>📞 +509 47403551</p>
+      </div>
     </div>
 
-    <!-- Flèche vers le haut -->
-    <a href="#" class="back-to-top">
-        <i class="fas fa-arrow-up"></i>
-    </a>
+    <hr class="my-2 border-white">
 
-    {% load static %}
-    <!-- Chargement des fichiers JavaScript -->
-    <script src="{% static 'js/footer.js' %}"></script>
+    <div class="row">
+      <div class="col-12 text-center mt-2">
+        <div>
+          <!-- Logo MonCash (déjà en ligne) -->
+          <img src="https://sandbox.moncashbutton.digicelgroup.com/Moncash-middleware/resources/assets/images/MC_button_kr.png" 
+               alt="MonCash" 
+               style="height: 30px;">
+          
+          <!-- Logo Visa -->
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_Logo.png" 
+               alt="Visa" 
+               width="50">
+          
+          <!-- Logo MasterCard -->
+          <img src="https://upload.wikimedia.org/wikipedia/commons/b/b7/MasterCard_Logo.svg" 
+               alt="MasterCard" 
+               width="50">
+          
+          <!-- Logo PayPal -->
+          <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg" 
+               alt="PayPal" 
+               width="50">
+      </div>
+      
+
+        <p class="mt-2">&copy; <span id="currentYear"></span> Baouly'S Store</p>
+      </div>
+    </div>
+  </div>
 </footer>
